[#38981] fixed viewer styles on mobile

--- a/frontend/src/app/modules/bim/ifc_models/ifc-viewer/ifc-viewer.component.sass
+++ b/frontend/src/app/modules/bim/ifc_models/ifc-viewer/ifc-viewer.component.sass
@@ -45,8 +45,12 @@
 
   &--inspector-container
     width: 420px
+    min-width: 300px
     border-left: 2px solid #eee
     border-top: 2px solid #eee
+
+    @media only screen and (max-width: 679px)
+      border-bottom: 2px solid #eee
 
     &-hidden
       display: none
